--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,25 @@
     <string name="app_name">PuppyPal</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Breed_info_customers_title">Breed Information</string>
+    <string name="nav_search">Search</string>
+    <string name="nav_chat">Chat</string>
+    <string name="nav_ad">Buy</string>
+    <string name="nav_info">Info</string>
+    <string name="height">Height(feet)</string>
+    <string name="weight">Weight(kg)</string>
+    <string name="life_span">Life Span(years)</string>
+    <string name="adap">Adaptability</string>
+    <string name="intel">Intelligence</string>
+    <string name="feed">Feedings</string>
+    <string name="moreInfo">More Info</string>
+    <string name="buy_puppies">Buy Puppies</string>
+    <string name="info_link">Infor Link</string>
+    <string name="breed_name">Breed Name</string>
+    <string name="reset">Reset</string>
+    <string name="add">Add</string>
+    <string name="update">Update</string>
+    <string name="update_breed_info">Update Breed Info</string>
+    <string name="admin_panel">Admin Panel</string>
+
 </resources>
