--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="age_months">Months</string>
     <string name="up_prof">Update Profile</string>
     <string name="change_pwd">Change Password</string>
-    <string name="update">Save Changes</string>
+<!--    <string name="update">Save Changes</string>-->
     <string name="prompt_new_pwd">New Password</string>
     <string name="prompt_old_pwd">Old Password</string>
     <string name="sample_profile_header">TimTim\'s Profile</string>
@@ -37,4 +37,23 @@
     <string name="sample_name_2">Sample Name 2</string>
     <string name="view_btn_search">View</string>
     <string name="btn_chat_search">Chat</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="Breed_info_customers_title">Breed Information</string>
+
+    <string name="height">Height(feet)</string>
+    <string name="weight">Weight(kg)</string>
+    <string name="life_span">Life Span(years)</string>
+    <string name="adap">Adaptability</string>
+    <string name="intel">Intelligence</string>
+    <string name="feed">Feedings</string>
+    <string name="moreInfo">More Info</string>
+    <string name="buy_puppies">Buy Puppies</string>
+    <string name="info_link">Infor Link</string>
+    <string name="breed_name">Breed Name</string>
+    <string name="reset">Reset</string>
+    <string name="add">Add</string>
+    <string name="update">Update</string>
+    <string name="update_breed_info">Update Breed Info</string>
+    <string name="admin_panel">Admin Panel</string>
 </resources>
